--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.application.name=vis-api-notify
 server.port=8765
 server.servlet.context-path=/visApiNotification
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/VIS
+#spring.datasource.url=jdbc:postgresql://postgres-db:5432/VIS
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://containers-us-west-73.railway.app:5521/VIS
 spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.profiles.active=dev
+spring.datasource.password=QbdrmvUICfROsYHbAHCn
