--- a/visusers/src/main/resources/application.properties
+++ b/visusers/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.application.name=vis-api-user
 server.port=8764
 server.servlet.context-path=/visApiUser
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/VIS
+#spring.datasource.url=jdbc:postgresql://postgres-db:5432/VIS
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://containers-us-west-73.railway.app:5521/VIS
 spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.profiles.active=dev
+spring.datasource.password=QbdrmvUICfROsYHbAHCn
 
 springdoc.swagger-ui.path=/vis.html
 springdoc.api-docs.path=/api-docs
